--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/anthropic": "^1.2.10",
     "@ai-sdk/deepseek": "^0.2.11",
     "@ai-sdk/openai": "^1.3.12",
     "@ai-sdk/react": "^1.2.9",
